--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.4.10",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-datepicker": "^8.1.0",
