--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
